javali_tests/A3/A4_keinestamSchmid/fail/Error.2.3.22.INVALIDRETURN.4.javali
// Test Check valid returntype
// rule 2.3.22

class referenceType{}

class subType extends referenceType{}

class Main {
	referenceType r;
	
	subType sub(){
		referenceType ref;
		ref = new referenceType();
		return ref;
	}
	
	void main() {
		r = sub();

	}
}